tests/integration/fail/merge_default_contract.ncl
# test = 'error'
#
# [metadata]
# error = 'EvalError::BlameError'
({ a = 2 } & { b | Number } & { b | default = true }).b